[gd_scene load_steps=6 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/logoABC.png" type="Texture" id=2]
[ext_resource path="res://assets/img/btn_palabras.png" type="Texture" id=3]
[ext_resource path="res://assets/img/btn_frases.png" type="Texture" id=4]
[ext_resource path="res://assets/img/btn_opciones.png" type="Texture" id=5]

[node name="MainMenu" type="ColorRect"]
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 360.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.733333, 0.952941, 0.898039, 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 330.0
margin_top = 160.0
margin_right = 971.0
margin_bottom = 270.0
texture = ExtResource( 2 )

[node name="btnWords" type="Button" parent="."]
margin_left = 345.0
margin_top = 450.0
margin_right = 615.0
margin_bottom = 534.0
icon = ExtResource( 3 )
flat = true

[node name="btnPhrases" type="Button" parent="."]
margin_left = 715.0
margin_top = 450.0
margin_right = 985.0
margin_bottom = 534.0
icon = ExtResource( 4 )
flat = true

[node name="btnSettings" type="Button" parent="."]
margin_left = 1010.0
margin_top = 615.0
margin_right = 1216.0
margin_bottom = 673.0
icon = ExtResource( 5 )
flat = true

[connection signal="pressed" from="btnWords" to="." method="_on_btnWords_pressed"]
[connection signal="pressed" from="btnPhrases" to="." method="_on_btnPhrases_pressed"]
[connection signal="pressed" from="btnSettings" to="." method="_on_btnSettings_pressed"]
